new proj/src/objects/GE_OG_SS_Customer_CTQ__c.object
<CustomObject>
    <fields>
        <fullName>GE_OG_SS_Availabilt_Importan_Factor__c</fullName>
        <inlineHelpText>How is resource availabilty  important to customerfor this opportunity</inlineHelpText>
        <label>Resource Availabilty Importance Factor</label>
        <picklist>
            <picklistValues>
                <fullName>More</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Competitor_Advantages__c</fullName>
        <label>Competitor Advantages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Competitor_Disadvantages__c</fullName>
        <label>Competitor Disadvantages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Customer_Relationship_Importanc__c</fullName>
        <inlineHelpText>How is relationship important to customer for this opportunity</inlineHelpText>
        <label>Customer Relationship Importance</label>
        <picklist>
            <picklistValues>
                <fullName>More</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Cycle_Time_Importance_factor__c</fullName>
        <inlineHelpText>How is Cycle time important to customer</inlineHelpText>
        <label>Cycle Time Importance factor(Commertial)</label>
        <picklist>
            <picklistValues>
                <fullName>More</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Market_Trends__c</fullName>
        <label>Market Trends</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Customer CTQS</relationshipLabel>
        <relationshipName>Customer_CTQS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Price_Importance_Factor_Capex__c</fullName>
        <inlineHelpText>How is price important to customer for this opportunity</inlineHelpText>
        <label>Price Importance Factor (Capex)</label>
        <picklist>
            <picklistValues>
                <fullName>More</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Product_Importanc_factor_Techni__c</fullName>
        <inlineHelpText>How is product solution  important to customer for this opportunity</inlineHelpText>
        <label>Product Solution Importance factor</label>
        <picklist>
            <picklistValues>
                <fullName>More</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Recommendations_for_leadershop__c</fullName>
        <label>Recommendations for leadership</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_T_C_Importance_Factor__c</fullName>
        <inlineHelpText>How are T&amp;C important to customerfor this opportunity</inlineHelpText>
        <label>T&amp;C Importance Factor</label>
        <picklist>
            <picklistValues>
                <fullName>More</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_SS_Why_do_we_Win_loss__c</fullName>
        <label>Why do we Win/loss</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Scope_Importance_Factor_Technical__c</fullName>
        <inlineHelpText>How is Scope (products &amp; services) important to customer for this opportunity</inlineHelpText>
        <label>Scope Importance Factor (Technical)</label>
        <picklist>
            <picklistValues>
                <fullName>More</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Customer CTQ</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer CTQ Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer CTQS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>